# LARGO

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  skills-lock.json  tailwind.config.js
.agents/skills/docs-guidelines/: SKILL.md
.agents/skills/docs-guidelines/evals/: evals.json  run_evals.py
.antigravity/: RULES.md
.gemini/: GEMINI.md
.github/: copilot-instructions.md  todo.md
.github/tasks/: history.md  lessons.md  todo.md
.github/workflows/: rust.yml
docs/: AUDIT_CHECKLIST.md  AUDIT_COMMANDS.sh  AUDIT_CONTRAST.md  AUDIT_REPORT.md  cheatsheet.html  index.md
docs/agents/: index.md
docs/agents/templates/: TEMPLATE.md
docs/ai/: README.md  prompts.md
docs/architecture/: adr-db.md  adr-gemini-model-selection.md  architecture.md
docs/architecture/adr/: README.md
docs/architecture/notes/: 01-tasks-foundation.md
docs/backend/: README.md  index.md
docs/backend/python/: README.md
docs/backend/rust/: README.md
docs/database/: index.md  indexes.md  schema.md  setup.md
docs/design/: README.md  brand-guidelines.md  palette.md  tokens.json  tokens.md
docs/design/assets/: README.md
docs/frontend/: README.md
docs/frontend/ui/: components.md
docs/frontend/web/: README.md
docs/skills/: README.md  index.md
docs/ui/: components.md
docs/ui/examples/: Logo.md  ValueBadge.md
gateway/: Cargo.toml
gateway/src/: app.rs  config.rs  db_init.rs  lib.rs  mongo.rs  tasks.rs
gateway/tests/: db_init_smoke.rs  healthcheck_foundation.rs  mongo_foundation.rs  post_tasks.rs
gateway/tests/support/: mod.rs
(+24 files in other folders)
