[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
mongodb = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
